# command_analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md  install.sh  package.xml
data/: annonymize_dataset.py  create_label.py  increase_dataset.py  trim_dataset.py
data/GPSRCmdGen/egpsr_grammars/: egpsr.txt
data/GPSRCmdGen/gpsr_grammars/: category1.txt
dataset/GPSRCmdGen/GPSR Examples/: GPSR Examples.txt
dataset/GPSRCmdGen/egpsr_grammars/: common.txt
dataset/GPSRCmdGen/gpsr_grammars/: category1.txt
dataset/data/: command.txt  test_data.txt  train_data.txt
dataset/scripts/: annonymize_dataset.py  auto_trim_dataset.sh  auto_trim_dataset_.sh  auto_trim_dataset_100.sh  auto_trim_dataset_8000000.sh  create_label.py  increase_dataset.py  increase_dataset_test.py  key_direct.py  test_auto_trim_dataset_1000.sh  trim_dataset.py  trim_dataset_test.py
doc/: 01_create_dataset.md  02_train_and_test.md
lib/: dicts.py  lists.py
model/backup/: label_vocab_01.pth  text_vocab_01.pth
model/example/: label_vocab_01.pth  param.txt  text_vocab_01.pth
model/example_01/: label_vocab_01.pth  text_vocab_01.pth
model/gpsr_2013/: label_vocab.pth  param.txt  text_vocab.pth
model/new/: label_vocab_01.pth  text_vocab_01.pth
model/new/ver4/: label_vocab_01.pth  text_vocab_01.pth
scripts/: example.py  example_with_ros.py  network.py  predict.py  test.py  train.py  train_01.py  train_backup.py  train_kaniver1.py
