<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>command_analyzer</name>
  <version>0.0.0</version>
  <description>
    This package analizes the command from the user and sends the result to the robot
  </description>
  <maintainer email="todo@gmail.com">Koshiro Suzuki</maintainer>

  <license>BSD</license>

  <url type="website">https://home.soka.ac.jp/~choi/index.html</url>
  <url type="repository">https://github.com/TeamSOBITS/command_analyzer</url>
  <url type="bugtracker">https://github.com/TeamSOBITS/command_analyzer/issues</url>
  <author email="choi.7f@gmail.com">Team SOBITS</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
